<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_gravity="center_vertical"
		android:layout_weight="1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:background="@drawable/logo"
			android:gravity="center_vertical|center_horizontal"
			android:layout_gravity="center_horizontal"
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_margin="10dp"
			android:text="@string/app_name"
			android:textColor="@color/normalNode"
			android:textSize="20sp"
			android:textStyle="bold" />

		<Button
			android:id="@+id/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="toLevelSelection"
			android:text="@string/level_select_btn"
			style="@style/ButtonStyle" />

		<Button
			android:id="@+id/button2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="toLevelSettings"
			android:text="@string/random_level_btn"
			style="@style/ButtonStyle" />

	</LinearLayout>

</LinearLayout>